<resources>
    <string name="app_name">TMDB App</string>
    <string name="title_trend_movies">Trending Movies</string>
    <string name="title_trend_tv_shows">Trending TV Shows</string>
    <string name="github_profile">My Github</string>
    <string name="search">Search</string>
    <string name="login">Log in</string>
    <string name="titulo">Title</string>
    <string name="poster">Poster</string>
    <string name="title_trend_persons">Trending Persons</string>
    <string name="known_for">Known for</string>
    <string name="key_title">Title:</string>
    <string name="value_title">Title</string>
    <string name="key_overview">Overview:</string>
    <string name="value_overview">Overview</string>
    <string name="key_release_date">ReleaseDate:</string>
    <string name="value_release_date">Release Date</string>
    <string name="value_vote_average">Vote Average</string>
    <string name="key_vote_average">Vote Average:</string>
    <string name="key_vote_count">Vote Count:</string>
    <string name="value_vote_count">Vote Count</string>
    <string name="title_details_movie">Pelicula</string>
    <string name="value_name">Name</string>
    <string name="value_first_air">First Air</string>
    <string name="key_first_air">First Air:</string>
    <string name="title_details_tv_show">TV Show</string>
    <string name="value_biography">Biography</string>
    <string name="value_job">Job</string>
    <string name="key_job">Job:</string>
    <string name="title_details_person">Person</string>
</resources>