<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/trending_movies_fragment">

    <fragment
        android:id="@+id/trending_movies_fragment"
        android:name="org.jorgetargz.movies.framework.list_trending_movies.ListTrendingMoviesFragment"
        android:label="@string/title_trend_movies"
        tools:layout="@layout/fragment_trending_movies" />

    <fragment
        android:id="@+id/trending_tv_shows_fragment"
        android:name="org.jorgetargz.movies.framework.list_trending_tv_shows.ListTrendingTVShowsFragment"
        android:label="@string/title_trend_tv_shows"
        tools:layout="@layout/fragment_trending_tv_shows" />

    <fragment
        android:id="@+id/trending_persons_fragment"
        android:name="org.jorgetargz.movies.framework.list_trending_persons.ListTrendingPersonsFragment"
        android:label="@string/title_trend_persons"
        tools:layout="@layout/fragment_trending_persons" />
</navigation>