<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.list_trending_tv_shows.ListTrendingTVShowsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_dark">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKeyTitle"
                style="@style/TextAppearance.AppCompat.Medium.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/key_title"
                app:layout_constraintBottom_toTopOf="@id/tvKeyOverview"
                app:layout_constraintEnd_toStartOf="@id/tvValueTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvValueTitle"
                style="@style/TextAppearance.AppCompat.Medium.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/value_title"
                app:layout_constraintBottom_toTopOf="@id/tvValueOverview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvKeyTitle"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKeyOverview"
                style="@style/TextAppearance.AppCompat.Medium.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/key_overview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvValueOverview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvKeyTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvValueOverview"
                style="@style/TextAppearance.AppCompat.Medium.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/value_overview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvKeyOverview"
                app:layout_constraintTop_toBottomOf="@id/tvValueTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="291dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>